--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -5,7 +5,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/contact_us.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../style/about_us.css">
     </head>
     <body>
         <header>
@@ -18,7 +17,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse menu-drop" id="navbarNavDropdown">
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
                                 <a class="nav-link active link-light" aria-current="page" href="home.html">Home</a>
@@ -27,16 +26,7 @@
                                 <a class="nav-link link-light" href="crypto.html">Crypto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link link-light" href="about_us.html">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
-                                  </svg></a>
-                                <div class="dropdown_menu">
-                                    <ul>
-                                        <li><a href="basicinfo.html">Basic Informations</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                        <li><a href="employment.html">Employment</a></li>
-                                    </ul>
-                                </div>
+                                <a class="nav-link link-light" href="about_us.html">About Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="contact_us.html">Contact Us</a>
@@ -60,16 +50,16 @@
             </nav>
         </header>
         <div class="header">
-            <h1>Kontakti</h1>
+            <h1>Contact</h1>
         </div>
         <div class="container">
             <div style="width: 60%; float:left">
             <section>
             <div class="row">
                 <div class="section-header">
-                        <h2>Kontaktoni me ne</h2>
+                        <h2>Contact with us</h2>
                         <p>
-                            <i><u> Në formën më poshtë mund të lini një koment ose rishikim për ne! Çdo mendim i klientëve tanë ka rëndësi për ne! </u></i>
+                            <i><u> In the form below you can leave a comment or review for us! Every thought of our clients matters to us!</u></i>
                         </p>
                 </div>
             </div>
@@ -79,7 +69,7 @@
                                 <form id="contact-form">
                                     <div class="input-box">
                                         <input type="text"
-                                        required="true" placeholder="Emri dhe Mbiemri">
+                                        required="true" placeholder="Full name">
                                     </div>
                                     <br>
                                     <div class="input-box">
@@ -88,12 +78,12 @@
                                     </div>
                                     <br>
                                     <div class="input-box">
-                                        <textarea name="" id="" cols="100" rows="7" placeholder="Mesazhi juaj"></textarea>
+                                        <textarea name="" id="" cols="100" rows="7" placeholder="Your Message To Us"></textarea>
                                     </div>
                                 </form>
                                 <br>
                                 <div class="submit">
-                                    <button class="submit button" type="submit">Dergo</button>
+                                    <button class="submit button" type="submit">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -106,15 +96,15 @@
             <div style="width: 30%; float:right">
             <section>
                   <div class="section-header">
-                          <h2>Orari i punes</h2>
-                          <h3>08 : 00 AM - 16 : 00 PM</h3>
+                          <h2>Working Hours</h2>
+                          <h3>08:00 AM - 16:00 PM</h3>
                   </div>
                   <div class="adresa">
                     <div class="text">
-                    <p>Ju gjithmonë mund të vini dhe të na takoni në selinë tonë:</p>
+                    <p>You can always come and meet us</p>
                       <br>
     
-                      <p> Adresa: Magjistralja Prishtine - Ferizaj, km i 6-te.</p>
+                      <p>Address: Street: 18 Osman Haxhiu, City: Pristina</p>
                       <br>
     
                       <p>Email: <b>contact@grandbank.com</b></p>
