--- a/sites/gallery.html
+++ b/sites/gallery.html
@@ -4,6 +4,8 @@
         <title>Gallery</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/about_us.css">
+        <link rel="stylesheet" href="../style/gallery.css">
+
     </head>
     <body>
         <header>
@@ -25,7 +27,7 @@
                                 <a class="nav-link link-light" href="crypto.html">Crypto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link link-light" href="about_us.html" target="_blank">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
+                                <a class="nav-link link-light" href="about_us.html">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
                                   </svg></a>
                                 <div class="dropdown_menu">
@@ -57,6 +59,21 @@
                 </div>
             </nav>
         </header>
+
+        <div class="division1">
+            <img src="../images/gallery1.png" class="image1" style="float:left">
+            <p class="paragraph1">The inside of the bank entrance</p>
+        </div>
+
+        <div class="division2">
+            <img src="../images/gallery2.png" class="image2" style="float:right">
+            <p class="paragraph2">The bank corridor</p>
+        </div>
+
+        <div class="division3">
+            <img src="../images/gallery3.png" class="image3" style="float:left">
+            <p class="paragraph3">The bank cafeteria</p>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
