--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -103,6 +103,21 @@
 
                       <p>Address: Street: 18 Osman Haxhiu, City: Pristina</p>
                       <br>
+                      <h4>What is your preferred contact method?</h3>
+                        <div class="form-check mb-3">
+                          <input class="form-check-input" type="radio" id="radio1" name="cmethod" value="phone" checked>
+                          <label class="form-check-label" for="radio1">Phone</label>
+                         </div>
+  
+                        <div class="form-check mb-3">
+                          <input class="form-check-input" type="radio" id="radio2" name="cmethod" value="mail">
+                          <label class="form-check-label" for="radio2">Email</label>
+                        </div>
+  
+                        <div class="form-check mb-3">
+                          <input class="form-check-input" type="radio" id="radio3" name="cmethod" value="post">
+                         <label class="form-check-label" for="radio3">Post</label>
+                         </div>
                       <p>Email: <b>contact@grandbank.com</b></p>
                       <br>
                     </div>
@@ -126,6 +141,15 @@
               </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <script>
+        function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    document.getElementById("navbar").style.top = "0";
+  } else {
+    document.getElementById("navbar").style.top = "-50px";
+  }
+}
 
+    </script>
     </body>
 </html>
