--- a/sites/crypto.html
+++ b/sites/crypto.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg" style="background-color:#E6C37A;">
+            <nav class="navbar navbar-expand-lg" style="background-color:#243945;">
                 <div class="container-fluid">
                     <a class="navbar-brand mx-2" href="home.html">
                         <img src="../images/small_logo.png" alt="Logo" height="40px" width="45px" class="rounded">
