--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -131,11 +131,10 @@
             <footer>
                 <div class="footer-content">
                     <ul class="socials">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                      <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+                      <li><a href="https://www.facebook.com/grand.bank.3" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://twitter.com/GrandBank_" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="https://www.youtube.com/@GrandBanksYachts" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                      <li><a href="https://www.linkedin.com/company/grandbank/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
                     </ul>
                 </div>
                 <div class="footer-bottom">
