--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -61,6 +61,8 @@
                         </p>
                 </div>
             </div>
+            <form id="forma1" action="./grandbank.html" method="post">
+
                     <div class="row">
                         <div class="contact-info">
                             <div class="contact-form">
@@ -101,7 +103,7 @@
                     <div class="text">
                     <p>You can always come and meet us</p>
 
-                      <p>Grand Bank, NL, Canada</p>
+                      <p><b>Grand Bank, NL, Canada</b></p>
                       <br>
                       <h4>What is your preferred contact method?</h3>
                         <div class="form-check mb-3">
@@ -113,18 +115,18 @@
                           <input class="form-check-input" type="radio" id="radio2" name="cmethod" value="mail">
                           <label class="form-check-label" for="radio2">Email</label>
                         </div>
-  
                         <div class="form-check mb-3">
                           <input class="form-check-input" type="radio" id="radio3" name="cmethod" value="post">
                          <label class="form-check-label" for="radio3">Post</label>
                          </div>
-                      
+                         <p><b>E-mail: grand_bank@gmail.com</b></p>
                       <br>
                     </div>
                 </div>
               </section>
             </div>
             </div>
+        </form>
             <section>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21731.7362212831!2d-55.76517898254629!3d47.08991440928087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b6d937117a6fdf3%3A0x3013eace34e25fab!2sGrand%20Bank%2C%20NL%2C%20Canada!5e0!3m2!1sen!2s!4v1672904281063!5m2!1sen!2s" width="100%" height="350" style="border:0; margon" allowfullscreen="" loading="lazy"  referrerpolicy="no-referrer-when-downgrade"></iframe>
               </section>
