--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -60,7 +60,7 @@
             </nav>
         </header>
 
-        <div class="container">
+        <div class="container mt-5">
             <div style="width: 60%; float:left">
             <section>
             <div class="row">
