--- a/sites/home.html
+++ b/sites/home.html
@@ -32,6 +32,7 @@
                                 About Us
                             </a>
                             <ul class="dropdown-menu" style="background-color:#243945;">
+                                <li><a class="dropdown-item" href="about_us.html">About</a></li>
                                 <li><a class="dropdown-item" href="basicinfo.html">Basic Informations</a></li>
                                 <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
                                 <li><a class="dropdown-item" href="employment.html">Employment</a></li>
