--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -25,17 +25,16 @@
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="crypto.html">Crypto</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link link-light" href="about_us.html">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
-                                  </svg></a>
-                                <div class="dropdown_menu">
-                                    <ul>
-                                        <li><a href="basicinfo.html">Basic Informations</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                        <li><a href="employment.html">Employment</a></li>
-                                    </ul>
-                                </div>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle link-light" href="about_us.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    About Us
+                                </a>
+                                <ul class="dropdown-menu" style="background-color:#243945;">
+                                    <li><a class="dropdown-item" href="about_us.html">About</a></li>
+                                    <li><a class="dropdown-item" href="basicinfo.html">Basic Informations</a></li>
+                                    <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                                    <li><a class="dropdown-item" href="employment.html">Employment</a></li>
+                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="contact_us.html">Contact Us</a>
@@ -128,7 +127,7 @@
                           <input class="form-check-input" type="radio" id="radio3" name="cmethod" value="post">
                          <label class="form-check-label" for="radio3">Post</label>
                          </div>
-                         <p><b>E-mail: grand_bank@gmail.com</b></p>
+                         <p><b>E-mail us at: <a href="mailto:grand_bank@gmail.com" id="email_link">grand_bank@gmail.com</a></b></p>
                       <br>
                     </div>
                 </div>
@@ -148,9 +147,9 @@
                       <li><a href="https://www.linkedin.com/company/grandbank/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
                     </ul>
                 </div>
-                <div class="footer-bottom">
-                  <p>copyright &copy;2023 Grand Bank</p>
-                </div>
+              </footer>
+              <footer class="copyright-section">
+                  <p>@Copyright 2022 - Grupi 22</p>
               </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
