--- a/sites/login.html
+++ b/sites/login.html
@@ -60,42 +60,39 @@
 
     <div class="container mt-5">
         <div class="row">
-            <div class="col-6">
-            <img src="../images/login.jfif" alt="" style="border-radius:20px;">
+            <div class="col-xl-6">
+                <img src="../images/login.jfif" alt="" style="border-radius:20px;" width="100%">
+            </div>
+
+            <div class="col-xl-6">
+                <form class="my-1" onsubmit="validateform()" id="login-form">
+                    <fieldset>
+                        <div class="container">
+                            <label class="form-label my-1" for="username"><b>Username  </b></label>
+                            <input type="text" class="form-control my-1" id="username">
+
+
+
+                            <label for="password" class="form-label my-1" style="width:5px;"><b>Password </b></label>
+                            <input type="password" id="password" class="form-control my-1">
+
+                            <p id="login-error-msg" style="opacity:0;">Your username or password is wrong!</p>
+
+                            <div>
+                                <button type="submit" class="login btn btn-secondary" id="login-form-submit">Log In</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+
         </div>
-
-        <div class="col-6">
-    <form class="my-1">
-        <fieldset>
-        <div class="container">
-            <label class="form-label my-1" for="username"><b>Username  </b></label>
-            <input type="text" placeholder="Enter Username" class="form-control my-1" required>
-
-
-
-            <label for="Password" class="form-label my-1" style="width:5px;"><b>Password </b></label>
-            <input type="password" placeholder="Enter Password" class="form-control my-1" required>
-
-            <br>
-
-    <div>
-      <button type="submit" class="login btn btn-secondary">Log In</button>
     </div>
-</div>
-
-        </div>
-
-
-    </fieldset>
-    </form>
-</div>
-</div>
-
-
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script type="text/javascript" src="../scripts/login.js">
+
+</script>
 </body>
 </html>
