--- a/sites/signup.html
+++ b/sites/signup.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="col mx-2">
-                <form  id="h" class="my-1">
+                <form  id="signup-form" class="my-1">
 
 
 
@@ -106,7 +106,9 @@
                             <label class="form-label my-1" for="confirm"><b>Repeat Password</b></label>
                             <input class="form-control my-1" type="password" name="confirm_password" id="confirm_password" class="input" required>
 
-                       <button type="submit" class="login btn btn-secondary my-1 ">Sign Up</button>
+                            <p id="signup-error-msg" style="opacity:0;">Your passwords don't match.</p>
+
+                       <button type="submit" class="login btn btn-secondary my-1 " id="signup-form-submit">Sign Up</button>
 
                        <p style="text-align:center; color:rgb(0, 221, 255);">Already have an accont? <a href="login.html" class="link">Log in</a> now</p>
                     </form>
@@ -115,6 +117,29 @@
 
 
         </div>
+
+        <script>
+
+            const loginForm = document.getElementById("signup-form");
+            const loginButton = document.getElementById("signup-form-submit");
+            const loginErrorMsg = document.getElementById("signup-error-msg");
+
+        signupButton.addEventListener("click", (e) => {
+         e.preventDefault();
+         const confirm = signupForm.confirm.value;
+         const password = signupForm.password.value;
+
+         if (confirm === "confirm_password" && password === "password") {
+        alert("Your passwords are not the same");
+      } else {
+        signupErrorMsg.style.color = 'red';
+        signupErrorMsg.style.opacity = 1;
+    }
+})
+
+
+        </script>
+        <script type="text/javascript" src="../scripts/signup.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
