--- a/sites/signup.html
+++ b/sites/signup.html
@@ -86,18 +86,15 @@
                             <div class="form-check form-check-inline">
 
                                 <input class="butoni form-check-input" type="radio" name="gjinia">
-                                <label class="form-check-label" for="">M</label>
+                                <label class="form-check-label" for="">F</label>
                             </div>
 
                          <div class="form-check form-check-inline my-1">
                          <input class="butoni form-check-input" type="radio" name="gjinia">
-                         <label class="form-check-label" for="">F</label>
+                         <label class="form-check-label" for="">M</label>
                         </div>
-
-
                          <br>
                             <label class="form-label my-1" for="ID"><b>ID number</b></label>
-
                              <input class="form-control my-1" type="text"  class="input">
 
                             <label class="form-label my-1" for="password"><b>Password</b></label>
@@ -110,35 +107,12 @@
 
                        <button type="submit" class="login btn btn-secondary my-1 " id="signup-form-submit">Sign Up</button>
 
-                       <p style="text-align:center; color:rgb(0, 221, 255);">Already have an accont? <a href="login.html" class="link">Log in</a> now</p>
+                       <p style="text-align:center; color:black;">Already have an accont? <a href="login.html" class="link">Log in</a> now</p>
                     </form>
                 </div>
             </div>
-
-
         </div>
 
-        <script>
-
-            const loginForm = document.getElementById("signup-form");
-            const loginButton = document.getElementById("signup-form-submit");
-            const loginErrorMsg = document.getElementById("signup-error-msg");
-
-        signupButton.addEventListener("click", (e) => {
-         e.preventDefault();
-         const confirm = signupForm.confirm.value;
-         const password = signupForm.password.value;
-
-         if (confirm === "confirm_password" && password === "password") {
-        alert("Your passwords are not the same");
-      } else {
-        signupErrorMsg.style.color = 'red';
-        signupErrorMsg.style.opacity = 1;
-    }
-})
-
-
-        </script>
         <script type="text/javascript" src="../scripts/signup.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
