--- a/sites/employment.html
+++ b/sites/employment.html
@@ -5,7 +5,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="../style/about_us.css">
         <link rel="stylesheet" href="../style/employment.css">
-
     </head>
     <body>
         <header>
@@ -26,17 +25,16 @@
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="crypto.html">Crypto</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link link-light" href="about_us.html">About Us <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
-                                  </svg></a>
-                                <div class="dropdown_menu">
-                                    <ul>
-                                        <li><a href="basicinfo.html">Basic Informations</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                        <li><a href="employment.html">Employment</a></li>
-                                    </ul>
-                                </div>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle link-light" href="about_us.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    About Us
+                                </a>
+                                <ul class="dropdown-menu" style="background-color:#243945;">
+                                    <li><a class="dropdown-item" href="about_us.html">About</a></li>
+                                    <li><a class="dropdown-item" href="basicinfo.html">Basic Informations</a></li>
+                                    <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                                    <li><a class="dropdown-item" href="employment.html">Employment</a></li>
+                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link link-light" href="contact_us.html">Contact Us</a>
