--- a/sites/home.html
+++ b/sites/home.html
@@ -28,7 +28,7 @@
                             <a class="nav-link link-light" href="crypto.html">Crypto</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle link-light" href="about_us.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle link-light" href="about_us.html" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="drop">
                                 About Us
                             </a>
                             <ul class="dropdown-menu" style="background-color:#243945;">
