--- a/sites/help.html
+++ b/sites/help.html
@@ -70,17 +70,36 @@
             <p class="help_text">A guide to some of the services we offer</p>
         </div>
 
-        <div class="help_boxes">
-            <div class="first_box">
-            
-            </div>
-            <div class="second_box">
+        <h4 class="FAQ_header">Frequenty Asked Questions</h4>
 
-            </div>
-            <div class="third_box">
-
-            </div>
+        <div class="FAQ_container">
+            <p class="FAQ_question">What Transactions Can Be Performed Using Online Banking?</p>
+            <ol>
+                <li>Transfers</li>
+                <ul style="list-style-type: square">
+                    <li>Internal transfers</li>
+                    <li>External transfers</li>
+                </ul>
+                <li>Bill payments</li>
+                <ul  style="list-style-type: square">
+                    <li>Credit card bills</li>
+                    <li>Subscriptions</li>
+                    <li>Utility bills</li>
+                </ul>
+            </ol>
         </div>
+
+      <div class="FAQ_container">
+        <p class="FAQ_question">How To Transfer Money Online?</p>
+        <ol>
+            <li>Login to your mobile/internet banking account.</li>
+            <li>On the main page that appears, click on 'Fund Transfer' option.</li>
+            <li>Select 'IMPS' as your method of fund transfer.</li>
+            <li>Provide the beneficiary's MMID and your MPIN to proceed.</li>
+            <li>Enter the amount that needs to be transferred.</li>
+            <li>Click on 'Confirm'</li>
+        </ol>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
