--- a/sites/help.html
+++ b/sites/help.html
@@ -70,37 +70,59 @@
             <p class="help_text">A guide to some of the services we offer</p>
         </div>
 
-        <h4 class="FAQ_header">Frequenty Asked Questions</h4>
+        <section class="container mt-1">
+            <h4 class="FAQ_header text-center">Frequenty Asked Questions</h4>
 
-        <div class="FAQ_container">
-            <p class="FAQ_question">What Transactions Can Be Performed Using Online Banking?</p>
-            <ol>
-                <li>Transfers</li>
-                <ul style="list-style-type: square">
-                    <li>Internal transfers</li>
-                    <li>External transfers</li>
-                </ul>
-                <li>Bill payments</li>
-                <ul  style="list-style-type: square">
-                    <li>Credit card bills</li>
-                    <li>Subscriptions</li>
-                    <li>Utility bills</li>
-                </ul>
-            </ol>
-        </div>
+            <div class="row">
+                <article class="FAQ_container col m-5">
+                    <p class="FAQ_question mt-3" id="faq-1">What Transactions Can Be Performed Using Online Banking?</p>
+                    <ol id="list-1">
+                        <li>Transfers</li>
+                        <ul style="list-style-type: square">
+                            <li>Internal transfers</li>
+                            <li>External transfers</li>
+                        </ul>
+                        <li>Bill payments</li>
+                        <ul  style="list-style-type: square">
+                            <li>Credit card bills</li>
+                            <li>Subscriptions</li>
+                            <li>Utility bills</li>
+                        </ul>
+                    </ol>
+                </article>
 
-      <div class="FAQ_container">
-        <p class="FAQ_question">How To Transfer Money Online?</p>
-        <ol>
-            <li>Login to your mobile/internet banking account.</li>
-            <li>On the main page that appears, click on 'Fund Transfer' option.</li>
-            <li>Select 'IMPS' as your method of fund transfer.</li>
-            <li>Provide the beneficiary's MMID and your MPIN to proceed.</li>
-            <li>Enter the amount that needs to be transferred.</li>
-            <li>Click on 'Confirm'</li>
-        </ol>
-    </div>
+                <article class="FAQ_container col m-5">
+                    <p class="FAQ_question mt-3" id="faq-2">How To Transfer Money Online?</p>
+                    <ol id="list-2">
+                        <li>Login to your mobile/internet banking account.</li>
+                        <li>On the main page that appears, click on 'Fund Transfer' option.</li>
+                        <li>Select 'IMPS' as your method of fund transfer.</li>
+                        <li>Provide the beneficiary's MMID and your MPIN to proceed.</li>
+                        <li>Enter the amount that needs to be transferred.</li>
+                        <li>Click on 'Confirm'</li>
+                    </ol>
+                </article>
+            </div>
+        </section>
+        <hr>
+        <section class="container">
+            Ketu mund te shtoni pjesen e videos
+        </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function(){
+            $("#list-1").hide();
+            $("#list-2").hide();
+        })
+        $("#faq-1").click(function(){
+            $("#list-1").slideToggle();
+            $("#list-2").slideToggle();
+        })
+        $("#faq-2").click(function(){
+            $("#list-1").slideToggle();
+            $("#list-2").slideToggle();
+        })
+    </script>
     </body>
 </html>
