--- a/sites/contact_us.html
+++ b/sites/contact_us.html
@@ -74,14 +74,14 @@
                                 </p>
                         </div>
                     </div>
-                        <form id="forma1" action="./grandbank.html" method="post">
+                        <form id="forma1" action="./grandbank.html" method="post" autocomplete="on">
                             <div class="row">
                                 <div class="contact-info">
                                     <div class="contact-form">
                                         <form id="contact-form">
                                             <div class="input-box">
                                                 <input type="text"
-                                                required="true" placeholder="Full name">
+                                                required="true" placeholder="Full name" pattern="[A-Za-z]">
                                             </div>
                                             <br>
                                             <div class="input-box">
